# SPECTRE

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
eval/: pca_embeddings_ct_rate.py  pca_image_embeddings.py  retrieval_ct_rate.py  save_embeddings_ct_rate.py  save_embeddings_merlin.py  tsne_embeddings_ct_rate.py  umap_embeddings_ct_rate.py
experiments/classification/: lung_nodule_classification.py
experiments/pretraining/: pretrain_clip.py  pretrain_dino.py  pretrain_dinov2.py  pretrain_dinov2_v3.py  pretrain_mae.py  pretrain_siglip.py
experiments/segmentation/: organ_segmentation_total_segmentator.py
experiments/zero-shot/: multi_abnormality_classification.py
output/: config.yaml
preprocessing/: augment_text.py  check_scan_details.py  download_ct_rate_valid.py  parse_ct_rate.py  parse_merlin.py  prepare_icd.py  preprocess_ct_rate.py  preprocess_nlst.py  preprocess_sinoct.py  pretrain_tokenizer.py  process_exclusions_ct_rate.py  test_dataloader.py  test_tokenizer.py
scripts/: pretrain_dino.sh  run_distributed.sh
spectre/: __init__.py
spectre/configs/: clip_default.yaml  dino_default.yaml  dinov2_default.yaml  mae_default.yaml  siglip_default.yaml  total_segmentator.yaml  total_segmentator_snellius.yaml
spectre/data/: __init__.py  _base_datasets.py  abdomen_atlas.py  abdomenct_1k.py  amos.py  cache_dataset.py  ct_rate.py  inspect.py  merlin.py  nlst.py  panorama.py  sinoct.py  total_segmentator.py
spectre/models/: __init__.py  eomt.py  resnet.py  (+7 more)
tests/: image_vs_imagetext_test.py
(+60 files in other folders)
