[metadata]
name = spectre
version = attr: spectre.__version__
description = SPECTRE: cross-modal Self-supervised Pretraining for CT Representation Extraction
long_description = file: README.md
long_description_content_type = text/markdown
author = Cris H.B. Claessens
license = CC-BY-NC-SA-4.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: CC BY-NC-SA 4.0

[options]
packages = find:
include-package-data = True
python_requires = >=3.8
zip_safe = False